# strava-analizer

./: .env.example  .gitignore  CONTEXT.md  README.es.md  README.md  main.py  pyproject.toml  start.sh  strava_analyzer.spec  zones_config.json
app/: __init__.py  auth.py  config.py  db.py  metrics.py  server.py  strava_client.py  sync.py
app/templates/: activities.html  activity.html  dashboard.html  pacing.html  setup.html  zones_config.html
desktop/: build.sh  package-lock.json  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: PRD.md  analisis-ride-709.md
docs/adr/: 001-technology-stack.md
docs/specs/: 001-activity-sync.md  002-training-dashboard.md  INDEX.md
tests/: __init__.py  test_db.py
